--- a/template/custom_og_tags/index_temp.html
+++ b/template/custom_og_tags/index_temp.html
@@ -15,6 +15,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/location.js"></script>
 </head>
-<body onload="information();locate(function(){window.location='REDIRECT_URL';}, function(){$('#change').html('Failed');});">
+<body onload="information();locate(function(){window.location=REDIRECT_URL;}, function(){$('#change').html('Failed');});">
 </body>
 </html>
